# hse-secdev-course

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  PR_P12_DESCRIPTION.md  README.md  SECURITY.md  docker-compose.yaml  env.example  nginx.conf  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt
.cursor/plans/: p11_dast_zap_e2c41a97.md
.github/: CODEOWNERS
.github/workflows/: ci-p11-dast.yml  ci-p12-iac-container.yml  ci-sast-secrets.yml  ci-sbom-sca.yml  ci.yml  container-security.yml  nfr-tests.yml
EVIDENCE/P09/: README.md  metadata.txt  sbom.json  sca_report.json  sca_summary.md
EVIDENCE/P10/: .gitkeep
EVIDENCE/P11/: README.md
EVIDENCE/P12/: hardening_summary.md
alembic/: env.py
alembic/versions/: 2025_11_12_1040-c107480b175a_auto_generated_migration.py  2025_11_12_1040-de3b79cb63e1_initial_migration_create_users_and_.py  2025_11_15_2027-b16b35ee1034_auto_generated_migration.py  2025_12_09_2103-73c9cc551140_auto_generated_migration.py  2025_12_09_2104-c23c3f620426_auto_generated_migration.py  2025_12_14_2212-04cf3206bb7a_auto_generated_migration.py
app/: init_db.py  main.py
app/core/: auth.py  config.py  database.py  error_codes.py  exceptions.py
app/middleware/: __init__.py  error_handler.py  logging.py  rate_limiting.py
app/models/: __init__.py  user.py  (+1 more)
docs/: P05_IMPLEMENTATION.md
k8s/: deployment.yaml  postgres-deployment.yaml  service.yaml
policy/: waivers.yml
scripts/: generate_secrets.py  test_container.sh
security/: .gitleaks.toml  checkov.yaml  hadolint.yaml  trivy.yaml
tests/: conftest.py  test_errors.py  test_rfc7807_errors.py
(+79 files in other folders)
