[tool.poetry]
name = "wishlist-api"
version = "0.1.0"
description = "Wishlist API with secure coding practices"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"
uvicorn = "^0.30.5"
sqlalchemy = "^2.0.43"
psycopg = {extras = ["binary"], version = "^3.2.10"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
alembic = "^1.13.1"
email-validator = "^2.1.1"
argon2-cffi = "^23.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
httpx = "^0.27.2"
ruff = "^0.6.9"
black = "^24.8.0"
isort = "^5.13.2"
pre-commit = "^3.8.0"
pytest-benchmark = "^4.0.0"
pytest-timeout = "^2.3.1"
pytest-asyncio = "^0.23.8"
locust = "^2.31.8"
psutil = "^6.1.0"
memory-profiler = "^0.61.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-xdist = "^3.5.0"
pytest-html = "^4.1.1"
pytest-json-report = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
lint.select = ["E","F","W"]
lint.ignore = ["E501"]
target-version = "py311"
exclude = ["venv",".venv","build","dist"]

[tool.black]
line-length = 79
skip-string-normalization = true
exclude = 'migrations|venv'

[tool.isort]
profile = 'black'
line_length = 79
known_local_folder=[]
skip = ['.gitignore', 'README.md', 'requirements', 'example.env', 'information', '.github']
skip_glob = ['*/migrations', '*/venv', '*/requirements', '*/templates']
